syntax = "proto3";

import "packages/hal/proto/device.proto";
import "packages/calibration/proto/camera_intrinsic_calibration.proto";
import "packages/calibration/proto/coordinate_transformation.proto";
import "packages/panorama_stitcher/proto/panorama_calibration.proto";

package teleop;

/// The role of the camera images, as images may be from a camera, or modified in some way (eg panorama, hdr). First eight match
/// hal.CameraId
enum CameraRole {
    FrontLeftStereo = 0;
    FrontRightStereo = 1;
    RearLeftStereo = 2;
    RearRightStereo = 3;
    FrontFisheye = 4;
    RearFisheye = 5;
    LeftFisheye = 6;
    RightFisheye = 7;
    // Possible HDR entries
    //    FrontLeftStereoHDR = 8;
    //    FrontRightStereoHDR = 9;
    //    RearLeftStereoHDR = 10;
    //    RearRightStereoHDR = 11;
    //    FrontFisheyeHDR = 12;
    //    RearFisheyeHDR = 13;
    //    LeftFisheyeHDR = 14;
    //    RightFisheyeHDR = 15;
    Panorama = 16;
}

/// Camera contains information about a physical camera on a vehicle
message Camera {
    /// The device for this camera
    hal.Device device = 10;

    /// Width of images generated by this camera
    int32 width = 20;

    /// Height of images generated by this camera
    int32 height = 30;

    /// Camera intrinsic calibration
    oneof intrinsics {
        calibration.CameraIntrinsicCalibration camera_intrinsics = 40;
        panorama.PanoramaIntrinsics panorama_intrinsics = 41;
    }

    /// Transformation from the world coordinate frame, in which z=0
    /// corresponds to the ground plane and the positive X axis corresponds to
    /// the forwards direction of travel for the robot, to the camera
    /// coordinate frame, in which the positive Z axis corresponds to the
    /// principle ray.
    calibration.CoordinateTransformation extrinsics = 50;

    // Role that this camera is for
    CameraRole role = 60;
}
